--- a/wheres-waldo/environment.yml
+++ b/wheres-waldo/environment.yml
@@ -3,7 +3,6 @@ channels:
   - pytorch
   - conda-forge
 dependencies:
-  - appnope=0.1.2
   - argon2-cffi=21.1.0
   - async_generator=1.10
   - attrs=21.2.0
@@ -40,8 +39,8 @@ dependencies:
   - libcxx=12.0.1
   - libdeflate=1.8
   - libffi=3.4.2
-  - libgfortran=5.0.0.dev0
-  - libgfortran5=11.0.1.dev0
+  - libgfortran
+  - libgfortran5
   - liblapack=3.9.0
   - libopenblas=0.3.18
   - libpng=1.6.37
